<resources>

    <string name="cancel_button">Cancel</string>
    <string name="start_button">REC</string>
    <string name="again_button">Try again</string>
    <string name="stop_button">Stop</string>

    <string name="failure">Failure</string>
    <string name="success">Success</string>

    <string name="enroll_failure_description">Please, try again to enroll</string>
    <string name="enroll_success_description">Great, now you can verify yourself</string>
    <string name="verify_failure_description">Oh, it is not you! Anyway try again</string>
    <string name="verify_success_description">Awesome! Now we are sure, what it is you.</string>

    <string name="voice_header">Record Your Voice</string>
    <string name="voice_hint_intro_enroll">You are going to record three number sequences.</string>
    <string name="voice_hint_intro_verify">You are going to record number sequence.</string>
    <string name="voice_header_error">Recording Error</string>
    <string name="enroll_voice_hint_error">Error during recording. Refer to message matrix.</string>
    <string name="verify_voice_hint_error">Voice validation error. Refer to message matrix.</string>

    <string name="face_header">Position Your Face</string>
    <string name="face_hint_ears">Position your face so your ears touch the edges of the frame</string>
    <string name="face_failed_header">Please, try again</string>
    <string name="face_failed_hint_ears">Your previous image face was corrupted, try again carefully</string>
    <string name="face_error">Error with scanned image. Refer to matrix.</string>
    <string name="face_scanning">Scanning feedback. Refer to message matrix.</string>

    <string name="enroll_phrases_1" translatable="false">0123456789</string>
    <string name="enroll_phrases_2" translatable="false">9876543210</string>
    <string name="enroll_phrases_3" translatable="false">1740938256</string>

    <string name="phrase_dynamic_1">zero one two three four five six seven eight nine</string>
    <string name="phrase_dynamic_2">nine eight seven six five four three two one zero</string>
    <string name="phrase_dynamic_3">one seven four zero nine three eight two five six</string>

    <string name="episode1" translatable="false">1/3</string>
    <string name="episode2" translatable="false">2/3</string>
    <string name="episode3" translatable="false">3/3</string>

    <string name="voice_text1">Press the REC button and pronounce</string>
    <string name="voice_text2">following digits:</string>


    <string name="analyzing_selfie">Analyzing your selfie…</string>
    <string name="option_title_selfie">Give it another shot</string>
    <string name="option_eyes_closed">Eyes closed. Look straight to the camera and give it another shot</string>
    <string name="option_more">More than one face detected. Make sure you are the only one in the camera and give it another shot</string>
    <string name="option_selfie3">Eyes not found</string>
    <string name="option_selfie4">Poor image quality</string>
    <string name="option_no_face">No face detected</string>
    <string name="option_pose">Pose not frontal. Look straight to the camera and give it another shot</string>
    <string name="retake_selfie">Retake the photo</string>

    <string name="analyzing_recording">Analyzing your recording…</string>
    <string name="option_title_rec">Give it another recording</string>
    <string name="option_record_quality">Poor record quality. Find a quiet place and try again.</string>
    <string name="option_pronunciation">Wrong digits pronunciation. Try again to pronounce the digits on your screen</string>
    <string name="option_short">The record is too short. Try again to pronounce the digits on your screen</string>
    <string name="retake_rec">Retake the recording</string>

    <string name="reg_complete_title">Registration complete</string>
    <string name="reg_complete_text">All set up and ready to go</string>
    <string name="reg_complete_button">Done</string>

    <string name="video_text">Press the REC button and pronounce digits</string>
    <string name="option_title_video">Give it another video</string>
    <string name="retake_video">Retake the video</string>

</resources>
