<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/borderLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">


        <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/dark_grey"
                android:layout_height="wrap_content"
                android:orientation="vertical" android:layout_weight="37.96">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/video_text"
                      android:textColor="@color/white"
                      android:layout_marginTop="5dp" android:layout_gravity="center_horizontal"/>
            <TextView
                    android:id="@+id/text_enroll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enroll_phrases_1"
                    style="@style/EnrollText"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:textIsSelectable="false"
                    android:gravity="center"
                    android:visibility="visible"
                    android:layout_marginTop="5dp" android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1000"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="@dimen/left_margin"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/dark_grey"/>

            <LinearLayout
                    android:id="@+id/border"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1000"
                    android:orientation="vertical"
                    android:background="@drawable/border">

            </LinearLayout>

            <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="@dimen/left_margin"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@color/dark_grey"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:background="@color/dark_grey"
                android:orientation="vertical">

            <Button
                    android:id="@+id/take_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="@string/start_button"
                    android:background="@drawable/round_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@color/dark_grey"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/analyzing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:background="@android:color/darker_gray"
            android:alpha="0.7">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" android:layout_gravity="center_horizontal"
                android:layout_marginTop="150dp"
                android:alpha="1"/>


        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/analyzing_selfie"
                  android:textColor="@color/yellow_light"
                  android:alpha="100"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="30dp"
                  android:textSize="15dp"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/failed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:background="@android:color/darker_gray"
            android:alpha="1">

        <TextView android:textAppearance="?android:attr/textAppearanceLarge"
                  android:text="@string/option_title_video"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="25dp"
                  android:textColor="@color/yellow_light"
                  android:layout_marginRight="25dp"
                  android:layout_marginTop="70dp"
                  android:layout_gravity="center_horizontal"
                  android:textSize="25dp"/>


        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_gravity="center_horizontal"
                      android:layout_marginTop="30dp">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:layout_gravity="center_vertical">

                <ImageView android:layout_width="32dp"
                           android:layout_height="27dp"
                           android:src="@drawable/closed_eyes_2x"
                           android:layout_gravity="center_horizontal"
                           android:alpha="1"/>

                <TextView android:textAppearance="?android:attr/textAppearanceSmall"
                          android:text="@string/option_eyes_closed"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="25dp"
                          android:textColor="@color/white"
                          android:layout_marginRight="25dp"
                          android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:layout_gravity="center_vertical"
                          android:layout_marginTop="5dp">

                <ImageView android:layout_width="32dp"
                           android:layout_height="27dp"
                           android:src="@drawable/many_faces_2x"
                           android:layout_gravity="center_horizontal"
                           android:alpha="1"/>

                <TextView android:textAppearance="?android:attr/textAppearanceSmall"
                          android:text="@string/option_more"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="25dp"
                          android:textColor="@color/white"
                          android:layout_marginRight="25dp"
                          android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:layout_gravity="center_vertical"
                          android:layout_marginTop="5dp">

                <ImageView android:layout_width="32dp"
                           android:layout_height="27dp"
                           android:src="@drawable/sunglasses_2x"
                           android:layout_gravity="center_horizontal"
                           android:alpha="1"/>

                <TextView android:textAppearance="?android:attr/textAppearanceSmall"
                          android:text="@string/option_selfie3"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="25dp"
                          android:textColor="@color/white"
                          android:layout_marginRight="25dp"
                          android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:layout_gravity="center_vertical"
                          android:layout_marginTop="5dp">

                <ImageView android:layout_width="32dp"
                           android:layout_height="27dp"
                           android:src="@drawable/poor_quality_2x"
                           android:layout_gravity="center_horizontal"
                           android:alpha="1"/>

                <TextView android:textAppearance="?android:attr/textAppearanceSmall"
                          android:text="@string/option_selfie4"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="25dp"
                          android:textColor="@color/white"
                          android:layout_marginRight="25dp"
                          android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:layout_gravity="center_vertical"
                          android:layout_marginTop="5dp">

                <ImageView android:layout_width="32dp"
                           android:layout_height="27dp"
                           android:src="@drawable/face_not_found_2x"
                           android:layout_gravity="center_horizontal"
                           android:alpha="1"/>

                <TextView android:textAppearance="?android:attr/textAppearanceSmall"
                          android:text="@string/option_no_face"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="25dp"
                          android:textColor="@color/white"
                          android:layout_marginRight="25dp"
                          android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:layout_gravity="center_vertical"
                          android:layout_marginTop="5dp">

                <ImageView android:layout_width="32dp"
                           android:layout_height="27dp"
                           android:src="@drawable/volume_mute_2x"
                           android:layout_gravity="center_horizontal"
                           android:alpha="1"/>

                <TextView android:textAppearance="?android:attr/textAppearanceSmall"
                          android:text="@string/option_pronunciation"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="25dp"
                          android:textColor="@color/white"
                          android:layout_marginRight="25dp"
                          android:layout_marginTop="5dp"/>

            </LinearLayout>

        </LinearLayout>

        <Button
                android:id="@+id/retake_button"
                android:layout_width="339dp"
                android:layout_height="wrap_content"
                android:text="@string/retake_video"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="140dp"/>
    </LinearLayout>

</RelativeLayout>